@@ -1,3 +1,8 @@
+2000-06-08  Nick Clifton  <nickc@cygnus.com>
+
+	* config/tc-arm.c (cons_fix_new_arm): Assign correct reloc value
+	for size 1 fixes.
+
 2000-06-08  David O'Brien  <obrien@FreeBSD.org>
 
 	* configure.in (VERSION): Update to show this is the CVS mainline.
